--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-<title>Template VR</titles
+    <title>Template VR</title>
 <script src="https://aframe.io/releases/8.9.2/aframe.min.js"></script>
 <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
 
