--- a/index.html
+++ b/index.html
@@ -6,22 +6,18 @@
   <body>
     <a-scene>
       <a-assets> 
-      <img id="v" scr="./assets/imagens/vitoria.png">
+      <img id="v" scr="https://github.com/Brenner279/Test-RV/blob/main/assets/imagens/vitoria.png">
     </a-assets>
       <a-camera position=" 0 1.6 0">
-        <a-cursor color= "red">
-<a-image scr= "#v" position= " 0 1.6 -3" height="2" height="4">
-
-  
-</a-image>
-          
-        </a-cursor>
+        <a-cursor color= "red"></a-cursor>
+<a-image scr= "#v" position= " 0 1.6 -3" height="1" height="2"></a-image>
         
       </a-camera>
 <a-entity environment="preset: forest; groundColor: #445; grid: cross"></a-entity>
     </a-scene>
 </body>
 </html>
+
 
 
 
