--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <a-scene>
       <a-assets> 
-      <img id="vit" scr="https://github.com/Brenner279/Test-RV/blob/main/assets/imagens/vitoria.png">
+      <img id="vit" scr="./assets/imagens/vitoria.png">
     </a-assets>
       <a-camera position=" 0 1.6 0">
         <a-cursor color= "red"></a-cursor>
@@ -16,6 +16,7 @@
     </a-scene>
 </body>
 </html>
+
 
 
 
