--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <a-text id="vr-titulo" value="TITULO" align="center" position="0 2.6 -2.9" color="#FFD700" width="6"></a-text>
         <a-text id="vr-texto" value="Olhe para o Play..." align="center" position="0 0.6 -2.9" width="3.5"></a-text>
 
-        <a-video id="vr-video-screen" src="#video-player" width="3" height="1.6" position="0 1.6 -2.9" visible="false"></a-video>
+        <a-video id="vr-video-screen" src="./assets/videos/vitoria.mp4" width="3" height="1.6" position="0 1.6 -2.9" visible="false"></a-video>
         
         <a-image id="vr-imagem-screen" width="2" height="1.4" position="0 1.6 -2.85" visible="false"></a-image>
 
@@ -320,6 +320,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
