--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@
         <a-text id="vr-titulo" value="TITULO" align="center" position="0 2.6 -2.9" color="#FFD700" width="6"></a-text>
         <a-text id="vr-texto" value="Olhe para o Play..." align="center" position="0 0.6 -2.9" width="3.5"></a-text>
 
+       <a-plane position="0 1.6 -2.9" width="1" height="0.3" color="#444" class="interativo" onclick="verConteudo('vr-video-screen')">
+         
         <a-video id="vr-video-screen" src="#video-player" width="3" height="1.6" position="0 1.6 -2.9" visible="false"></a-video>
         
         <a-image id="vr-imagem-screen" width="2" height="1.4" position="0 1.6 -2.85" visible="false"></a-image>
@@ -320,6 +322,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
