--- a/index.html
+++ b/index.html
@@ -289,21 +289,30 @@
 
         <a-entity id="controles-media" position="0 0 -2.9" visible="false">
             
-            <a-entity position="-0.5 0 0" class="interativo" onclick="togglePlay()">
-               <a-circle id="btn-play-cor" radius="0.25" color="green"
+            <a-entity position="-0.5 0 0">
+               <a-circle id="btn-play-cor" 
+                 radius="0.25" 
+                 color="green"
+                 class="interativo" 
+                 onclick="togglePlay()"
                  animation__sc="property: scale; to: 1.2 1.2 1.2; dur: 200; startEvents: mouseenter"
                  animation__out="property: scale; to: 1 1 1; dur: 200; startEvents: mouseleave">
                </a-circle>
                <a-text id="btn-play-txt" value="PLAY" align="center" position="0 -0.4 0"></a-text>
             </a-entity>
 
-            <a-entity position="0.5 0 0" class="interativo" onclick="restartMedia()">
-               <a-circle radius="0.25" color="#0055ff"
+            <a-entity position="0.5 0 0">
+               <a-circle 
+                 radius="0.25" 
+                 color="#0055ff"
+                 class="interativo" 
+                 onclick="restartMedia()"
                  animation__sc="property: scale; to: 1.2 1.2 1.2; dur: 200; startEvents: mouseenter"
                  animation__out="property: scale; to: 1 1 1; dur: 200; startEvents: mouseleave">
                </a-circle>
                <a-text value="RESTART" align="center" position="0 -0.4 0"></a-text>
             </a-entity>
+
         </a-entity>
 
         <a-plane position="0 -1.2 -3" width="1" height="0.4" color="#444" class="interativo" onclick="irPara('grupo-categorias')">
@@ -314,3 +323,4 @@
   </a-scene>
 </body>
 </html>
+
