--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
   <a-scene background="color: #111">
 
-<a-entity environment="preset: contact; groundColor: #445; grid: cross"></a-entity>
+<a-entity environment="preset: default; groundColor: #445; grid: cross"></a-entity>
     
     <a-assets>
        <video id="video-player" loop="true" crossorigin="anonymous" playsinline webkit-playsinline></video>
@@ -325,6 +325,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
