--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Explora AP - VR Final</title>
+  <title>Amapá Interativo: Explore, interaja e aprenda sobre cada município</title>
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
  <script src="https://unpkg.com/aframe-environment-component@1.5.x/dist/aframe-environment-component.min.js"></script>
   <script>
@@ -325,6 +325,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
