--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       const chaves = Object.keys(db);
      
       let col = 0; let row = 0;
-      const chavesPorLinha = 3;
+      const chavesPorLinha = 4;
 
       chaves.forEach((chave) => {
         const cidade = db[chave];
@@ -278,7 +278,7 @@
                <a-text id="btn-play-txt" value="PLAY" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" width="4" height="2" position="-0.5 0 0"></a-text>
             </a-entity>
 
-            <a-entity position="0.5 0 0">
+            <a-entity position="0.3 0 0">
                <a-circle
                  radius="0.20"
                  color="#0055ff"
@@ -287,14 +287,13 @@
                  animation__sc="property: scale; to: 1 1 1; dur: 200; startEvents: mouseenter"
                  animation__out="property: scale; to: 1 1 1; dur: 200; startEvents: mouseleave">
                </a-circle>
-               <a-text value="RESTART" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" width="4" height="2" position="0.6 0 0"></a-text>
+               <a-text value="RESTART" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" width="4" height="2" position="0.65 0 0"></a-text>
             </a-entity>
 
         </a-entity>
         
-        <a-text id="vr-texto" value="Olhe para o Play..." font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" position="0 0.4 -2.8" width="3.5"></a-text>
-
-        <a-plane position="0 0.15 -2.9" width="1" height="0.25" color="#444" class="interativo" onclick="irPara('grupo-categorias')">
+        <a-text id="vr-texto" value="" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" position="0 0.4 -2.8" width="0"></a-text>
+        <a-plane position="0 0.15 -2.9" width="0" height="0.25" color="#444" class="interativo" onclick="irPara('grupo-categorias')">
             <a-text value="VOLTAR" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center"></a-text>
         </a-plane>
     </a-entity>
