--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             animation__out="property: scale; to: 1 1 1; dur: 200; startEvents: mouseleave">
              <a-plane position="0 0 -0.01" width="1.05" height="0.75" color="#FFD700" material="shader: flat"></a-plane>
           </a-plane>
-          <a-text value="${cidade.nome}" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" position="0 -0.6 0" width="4" color="#FFFFFF" shader="msdf">
+          <a-text value="${cidade.nome}" font="	https://cdn.aframe.io/fonts/Roboto-msdf.json" align="center" position="0 -0.6 0" width="4" color="#FFFF00" shader="msdf">
              <a-plane position="0 0 -0.01" width="2" height="0.3" color="black" opacity="0.6"></a-plane>
           </a-text>
         `;
@@ -333,8 +333,10 @@
     </a-entity>
 
     <a-entity id="grupo-inicio" visible="true">
-        <a-text value="Amapa Interativo" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" position="0 3 -3" width="10" color="#000000"></a-text>     
-        <a-plane position="0 1.6 -3" width="1.5" height="0.6" color="#004d40" class="clicavel interativo" onclick="irPara('grupo-cidades')">
+        <a-text value="Amapa Interativo" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" position="0 3 -3" width="10" color="#000000"></a-text>    
+        <a-text value="Explore, interaja e aprenda sobre cada município." font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" position="0 2.5 -3" width="5" color="#000000" ></a-text>
+      
+        <a-plane position="0 1.6 -3" width="1.5" height="0.6" color="#000000" class="clicavel interativo" onclick="irPara('grupo-cidades')">
             <a-text value="INICIAR" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" width="6"></a-text>
         </a-plane>
     </a-entity>
@@ -348,7 +350,7 @@
     </a-entity>
 
     <a-entity id="grupo-categorias" visible="false">
-        <a-text id="titulo-cidade-cat" value="CIDADE" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" position="0 3 -3" width="10" color="#FFF" ></a-text>
+        <a-text id="titulo-cidade-cat" value="CIDADE" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" position="0 3 -3" width="10" color="#FFFF00" ></a-text>
         <a-plane position="-1.2 2 -3" width="1.2" height="0.8" color="#004d40" class="clicavel interativo" onclick="verConteudo('Historia')">
             <a-text value="Historia (360)" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" width="6"></a-text>
         </a-plane>
@@ -395,5 +397,4 @@
   </a-scene>
 </body>
 </html>
-
 
