--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
              <a-plane position="0 0 -0.01" width="1.05" height="0.75" color="#FFD700" material="shader: flat"></a-plane>
           </a-plane>
           <a-text value="${cidade.nome}" font="	https://cdn.aframe.io/fonts/Roboto-msdf.json" align="center" position="0 -0.6 0" width="4" color="#FFFF00" shader="msdf">
-             <a-plane position="0 0 -0.01" width="2" height="0.3" color="black" opacity="0.6"></a-plane>
-          </a-text>
+            
+    </a-text>
         `;
         container.appendChild(el);
       });
@@ -342,7 +342,7 @@
     </a-entity>
 
     <a-entity id="grupo-cidades" visible="false">
-        <a-text value="Escolha o Destino" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" position="0 3.5 -4" width="8" color="#FFF"></a-text>
+        <a-text value="Escolha o Destino" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" position="0 2.8 -4" width="8" ></a-text>
         <a-entity id="grade-cidades" position="0 0 0"></a-entity>
         <a-plane position="0 0.5 -3" width="1" height="0.4" color="#444" class="clicavel interativo" onclick="irPara('grupo-inicio')">
             <a-text value="VOLTAR" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center"></a-text>
@@ -350,17 +350,17 @@
     </a-entity>
 
     <a-entity id="grupo-categorias" visible="false">
-        <a-text id="titulo-cidade-cat" value="CIDADE" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" position="0 3 -3" width="10" color="#FFFF00" ></a-text>
-        <a-plane position="-1.2 2 -3" width="1.2" height="0.8" color="#004d40" class="clicavel interativo" onclick="verConteudo('Historia')">
-            <a-text value="Historia (360)" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" width="6"></a-text>
+        <a-text id="titulo-cidade-cat" value="CIDADE" font="https://cdn.aframe.io/fonts/SourceCodePro.fnt" align="center" position="0 3 -3" width="10" color="	#000000" ></a-text>
+        <a-plane position="-1.5 2 -3" width="1.2" height="0.8" color="#004d40" class="clicavel interativo" onclick="verConteudo('Historia')">
+            <a-text value="Historia" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" width="5"></a-text>
         </a-plane>
         <a-plane position="0 2 -3" width="1.2" height="0.8" color="#E64A19" class="clicavel interativo" onclick="verConteudo('Cultura')">
-            <a-text value="Cultura (Galeria)" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" width="6"></a-text>
+            <a-text value="Cultura" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" width="5"></a-text>
         </a-plane>
-        <a-plane position="1.2 2 -3" width="1.2" height="0.8" color="#388E3C" class="clicavel interativo" onclick="verConteudo('Turismo')">
-            <a-text value="Turismo (Videos)" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" width="6"></a-text>
+        <a-plane position="1.5 2 -3" width="1.2" height="0.8" color="#388E3C" class="clicavel interativo" onclick="verConteudo('Turismo')">
+            <a-text value="Turismo" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" width="5"></a-text>
         </a-plane>
-        <a-plane position="1.5 1 -3" width="1" height="0.3" color="#444" class="clicavel interativo" onclick="irPara('grupo-cidades')">
+        <a-plane position="0 1 -3" width="1" height="0.3" color="#444" class="clicavel interativo" onclick="irPara('grupo-cidades')">
             <a-text value="VOLTAR" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center"></a-text>
         </a-plane>
     </a-entity>
@@ -374,7 +374,7 @@
     </a-entity>
 
     <a-entity id="grupo-turismo-galeria" visible="false">
-        <a-text id="titulo-turismo" value="Turismo" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" position="0 3 -3" width="8" color="#FFD700"></a-text>
+        <a-text id="titulo-turismo" value="Turismo" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" position="0 3 -3" width="8" color="	#000000"></a-text>
         <a-entity id="container-molduras-turismo"></a-entity>
         <a-plane position="0 0.5 -3" width="1" height="0.3" color="#444" class="clicavel interativo" onclick="voltarParaCategorias()">
             <a-text value="VOLTAR" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center"></a-text>
@@ -397,4 +397,5 @@
   </a-scene>
 </body>
 </html>
+
 
