--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
         <a-text value="Amapa Interativo" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" position="0 3 -3" width="10" color="#000000"></a-text>     
         <a-text value="Explore, interaja e aprenda sobre cada município." font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" position="0 2.5 -3" width="5" color="#000000" ></a-text>
         
-        <a-image src="./assets/imagens/mapa.png" position="-3 2 -4" rotation="0 20 0" width="3" height="2"></a-image>
-        <a-image src="./assets/imagens/amapa.png" position="3 2 -4" rotation="0 -20 0" width="3" height="2"></a-image>
+        <a-image src="./assets/imagens/mapa.jpeg" position="-3 2 -4" rotation="0 20 0" width="2" height="1"></a-image>
+        <a-image src="./assets/imagens/amapa.png" position="3 2 -4" rotation="0 -20 0" width="2" height="1"></a-image>
 
         <a-plane position="0 1.6 -3" width="1.5" height="0.6" color="#004d40" class="clicavel interativo" onclick="irPara('grupo-cidades')">
             <a-text value="INICIAR" font="https://cdn.aframe.io/fonts/Exo2Bold.fnt" align="center" width="6"></a-text>
@@ -376,3 +376,4 @@
   </a-scene>
 </body>
 </html>
+
