--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     /* --- NAVEGAÇÃO --- */
     function irPara(idGrupo) {
-      const grupos = ['grupo-inicio', 'grupo-cidades', 'grupo-categorias', 'grupo-player', 'grupo-cultura-galeria', 'grupo-opa-galeria'];
+      const grupos = ['grupo-inicio', 'grupo-cidades', 'grupo-categorias', 'grupo-player', 'grupo-cultura-galeria', 'grupo-turismo-galeria'];
       grupos.forEach(g => {
         const el = document.getElementById(g);
         el.setAttribute('visible', 'false');
@@ -394,6 +394,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
