--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         let p = 'forest';
         if(idGrupo === 'grupo-cidades') p = 'threetowers'; 
         if(idGrupo === 'grupo-cultura-galeria') p = 'egypt'; 
-        if(idGrupo === 'grupo-turismo-galeria') p = 'yavapai'; 
+        if(idGrupo === 'grupo-turismo-galeria') p = 'contact'; 
         if(idGrupo === 'grupo-player') p = 'starry';
         el.setAttribute('environment', { preset: p, grid: 'cross' });
     }
@@ -337,4 +337,5 @@
   </a-scene>
 </body>
 </html>
+
 
