--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     function atualizarAmbiente(idGrupo) {
         if(document.getElementById('videosphere').getAttribute('visible') == true) return;
         const el = document.getElementById('ambiente-3d');
-        let p = 'forest';
+        let p = 'starry';
         if(idGrupo === 'grupo-cidades') p = 'threetowers'; 
         if(idGrupo === 'grupo-cultura-galeria') p = 'threetowers'; 
         if(idGrupo === 'grupo-turismo-galeria') p = 'contact'; 
@@ -337,6 +337,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
