--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
     </a-entity>
 
     <a-entity id="grupo-inicio" visible="true">
-        <a-troika-text value="Amapá Interativo" align="center" position="0 3 -3" width="10" color="#800000"></a-troika-text>     
-        <a-troika-text value="Explore e aprenda sobre cada município." align="center" position="0 2.7 -3" width="6" color="#800000"></a-troika-text>
+        <a-troika-text value="Amapá Interativo" align="center" position="0 3 -3" width="10"  color="#FFFFFF" outline-width="0.02" outline-color="#000" ></a-troika-text>     
+        <a-troika-text value="Explore e aprenda sobre cada município." align="center" position="0 2.7 -3" width="6" color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         
         <a-image src="#img-inicio-esq" position="-3 2 -4" rotation="0 20 0" width="3" height="2"></a-image>
         <a-image src="#img-inicio-dir" position="3 2 -4" rotation="0 -20 0" width="3" height="2"></a-image>
@@ -295,7 +295,7 @@
     </a-entity>
 
     <a-entity id="grupo-cidades" visible="false">
-        <a-troika-text value="Escolha o Destino" align="center" position="0 2.7 -4" width="8" color="	#000000" ></a-troika-text>
+        <a-troika-text value="Escolha o Destino" align="center" position="0 2.7 -4" width="8"  color="#FFFFFF" outline-width="0.02" outline-color="#000" ></a-troika-text>
         <a-entity id="grade-cidades" position="0 0 0"></a-entity>
         <a-plane position="0 0.5 -3" width="1" height="0.4" color="#444" class="interativo" onclick="irPara('grupo-inicio')">
             <a-troika-text value="VOLTAR" align="center" position="0 0 0.02"></a-troika-text>
@@ -337,6 +337,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
