--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         <a-image src="#img-inicio-dir" position="3 2 -4" rotation="0 -20 0" width="3" height="2"></a-image>
 
         <a-plane position="0 1.6 -3" width="1.5" height="0.6" color="#004d40" class="clicavel interativo" onclick="irPara('grupo-cidades')">
-            <a-troika-text value="Iniciar" align="center" position="0 0 0.02" width="6"></a-troika-text>
+            <a-troika-text value="Iniciar" align="center" position="0 0 0.02" width="6"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         </a-plane>
     </a-entity>
 
@@ -390,31 +390,31 @@
         <a-troika-text value="Escolha o Destino" align="center" position="0 2.7 -4" width="8"  color="#FFFFFF" outline-width="0.02" outline-color="#000" ></a-troika-text>
         <a-entity id="grade-cidades" position="0 0 0"></a-entity>
         <a-plane position="0 0.5 -3" width="1" height="0.4" color="#444" class="interativo" onclick="irPara('grupo-inicio')">
-            <a-troika-text value="Voltar" align="center" position="0 0 0.02"></a-troika-text>
+            <a-troika-text value="Voltar" align="center" position="0 0 0.02"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         </a-plane>
     </a-entity>
 
     <a-entity id="grupo-categorias" visible="false">
         <a-troika-text id="titulo-cidade-cat" value="CIDADE" align="center" position="0 2.7 -3" width="10"></a-troika-text>
         <a-plane position="-1.5 2 -3" width="1.2" height="0.6" color="#004d40" class="interativo" onclick="verConteudo('Historia')">
-            <a-troika-text value="História" align="center" position="0 0 0.02" width="5"></a-troika-text>
+            <a-troika-text value="História" align="center" position="0 0 0.02" width="5"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         </a-plane>
         <a-plane position="0 2 -3" width="1.2" height="0.6" color="#E64A19" class="interativo" onclick="verConteudo('Cultura')">
-            <a-troika-text value="Cultura" align="center" position="0 0 0.02" width="5"></a-troika-text>
+            <a-troika-text value="Cultura" align="center" position="0 0 0.02" width="5"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         </a-plane>
         <a-plane position="1.5 2 -3" width="1.2" height="0.6" color="#388E3C" class="interativo" onclick="verConteudo('Turismo')">
-            <a-troika-text value="Turismo" align="center" position="0 0 0.02" width="5"></a-troika-text>
+            <a-troika-text value="Turismo" align="center" position="0 0 0.02" width="5"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         </a-plane>
         <a-plane position="0 1 -3" width="1" height="0.3" color="#444" class="interativo" onclick="irPara('grupo-cidades')">
-            <a-troika-text value="Voltar" align="center" position="0 0 0.02"></a-troika-text>
+            <a-troika-text value="Voltar" align="center" position="0 0 0.02"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         </a-plane>
     </a-entity>
 
     <a-entity id="grupo-cultura-galeria" visible="false">
-        <a-troika-text value="Cultura" align="center" position="0 2.3 -3" width="8"></a-troika-text>
+        <a-troika-text value="Cultura" align="center" position="0 2.3 -3" width="8"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         <a-entity id="container-molduras-cultura"></a-entity>
         <a-plane position="0 0.5 -3" width="1" height="0.3" color="#444" class="interativo" onclick="voltarParaCategorias()">
-            <a-troika-text value="Voltar" align="center" position="0 0 0.02"></a-troika-text>
+            <a-troika-text value="Voltar" align="center" position="0 0 0.02" color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         </a-plane>
     </a-entity>
 
@@ -422,13 +422,14 @@
         <a-troika-text value="Turismo" align="center" position="0 2.3 -3" width="8"></a-troika-text>
         <a-entity id="container-molduras-turismo"></a-entity>
         <a-plane position="0 0.5 -3" width="1" height="0.3" color="#444" class="interativo" onclick="voltarParaCategorias()">
-            <a-troika-text value="Voltar" align="center" position="0 0 0.02"></a-troika-text>
+            <a-troika-text value="Voltar" align="center" position="0 0 0.02"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         </a-plane>
     </a-entity>
 
   </a-scene>
 </body>
 </html>
+
 
 
 
