--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             <a-troika-text value="Turismo" align="center" position="0 0 0.02" width="5"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         </a-plane>
         <a-plane position="0 1 -3" width="1" height="0.3" color="#444" class="interativo" onclick="irPara('grupo-cidades')">
-            <a-troika-text value="Voltar" align="center" position="0 0 0.02"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
+            <a-troika-text value="Voltar" align="center" position="0 0 0.02"color="	#FFD700" outline-width="0.02" outline-color="#000"></a-troika-text>
         </a-plane>
     </a-entity>
 
@@ -429,6 +429,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
