--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   
   <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
   <script src="https://unpkg.com/aframe-environment-component@1.5.x/dist/aframe-environment-component.min.js"></script>
-  
   <script src="https://unpkg.com/aframe-troika-text@0.10.0/dist/aframe-troika-text.min.js"></script>
   
   <script>
@@ -419,7 +418,7 @@
     </a-entity>
 
     <a-entity id="grupo-turismo-galeria" visible="false">
-        <a-troika-text value="Turismo" align="center" position="0 2.3 -3" width="8"></a-troika-text>
+        <a-troika-text value="Turismo" align="center" position="0 2.3 -3" width="8" color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         <a-entity id="container-molduras-turismo"></a-entity>
         <a-plane position="0 0.5 -3" width="1" height="0.3" color="#444" class="interativo" onclick="voltarParaCategorias()">
             <a-troika-text value="Voltar" align="center" position="0 0 0.02"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
@@ -429,6 +428,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
