--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
     </a-entity>
 
     <a-entity id="grupo-categorias" visible="false">
-        <a-troika-text id="titulo-cidade-cat" value="CIDADE" align="center" position="0 2.7 -3" width="10"></a-troika-text>
+        <a-troika-text id="titulo-cidade-cat" value="CIDADE" align="center" position="0 2.7 -3" width="10" color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         <a-plane position="-1.5 2 -3" width="1.2" height="0.6" color="#004d40" class="interativo" onclick="verConteudo('Historia')">
             <a-troika-text value="História" align="center" position="0 0 0.02" width="5"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         </a-plane>
@@ -428,6 +428,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
