--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             const el = document.createElement('a-entity');
             el.setAttribute('position', pos[index].p); el.setAttribute('rotation', pos[index].r);
             el.innerHTML = `
-                <a-plane src="#${videoID}" width="1.6" height="1.1" class="clicavel interativo video-moldura" data-vid-id="${videoID}" material="shader: flat; side: double"></a-plane>
+                <a-plane src="#${videoID}" width="1.8" height="1.2" class="clicavel interativo video-moldura" data-vid-id="${videoID}" material="shader: flat; side: double"></a-plane>
                 <a-troika-text value="${item.txt}" align="center" position="0 -0.8 0.1" width="2" color="#FFF" outline-width="0.02"></a-troika-text>`;
             container.appendChild(el);
         });
@@ -402,7 +402,7 @@
             <a-troika-text value="Cultura" align="center" position="0 0 0.02" width="5"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         </a-plane>
         <a-plane position="1.5 2 -3" width="1.2" height="0.6" color="#388E3C" class="interativo" onclick="verConteudo('Turismo')">
-            <a-troika-text value="Turismo" align="center" position="0 0 0.02" width="5"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
+            <a-troika-text value="Pontos Turísticos" align="center" position="0 0 0.02" width="5"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         </a-plane>
         <a-plane position="0 1 -3" width="1" height="0.3" color="#444" class="interativo" onclick="irPara('grupo-cidades')">
             <a-troika-text value="Voltar" align="center" position="0 0 0.02"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
@@ -410,7 +410,7 @@
     </a-entity>
 
     <a-entity id="grupo-cultura-galeria" visible="false">
-        <a-troika-text value="Cultura" align="center" position="0 2.3 -3" width="8"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
+        <a-troika-text value="Galeria Cultural" align="center" position="0 2.3 -3" width="8"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         <a-entity id="container-molduras-cultura"></a-entity>
         <a-plane position="0 0.5 -3" width="1" height="0.3" color="#444" class="interativo" onclick="voltarParaCategorias()">
             <a-troika-text value="Voltar" align="center" position="0 0 0.02" color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
@@ -418,7 +418,7 @@
     </a-entity>
 
     <a-entity id="grupo-turismo-galeria" visible="false">
-        <a-troika-text value="Turismo" align="center" position="0 2.35 -3" width="8" color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
+        <a-troika-text value="Pontos Turismo" align="center" position="0 2.35 -3" width="8" color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
         <a-entity id="container-molduras-turismo"></a-entity>
         <a-plane position="0 0.5 -3" width="1" height="0.3" color="#444" class="interativo" onclick="voltarParaCategorias()">
             <a-troika-text value="Voltar" align="center" position="0 0 0.02"color="#FFFFFF" outline-width="0.02" outline-color="#000"></a-troika-text>
@@ -428,3 +428,4 @@
   </a-scene>
 </body>
 </html>
+
