--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             }
           } },
       'santana': { nome: 'Santana', bandeira: './assets/bandeiras/santana.jpg', hino: './assets/hinos/santana.mp3',  conteudos: {
-            'Historia': { t: 'História', video: './assets/videos/macapa_historia.mp4', tipo: 'video360' },
+            'Historia': { t: 'História', video: './assets/videos/sant360.mp4', tipo: 'video360' },
             'Cultura': { 
                 t: 'Galeria Cultural', type: 'galeria', itens: [
                     { img: './assets/imagens/jose.jpg', txt: 'Festividade São José' },
@@ -428,5 +428,6 @@
   </a-scene>
 </body>
 </html>
+
 
 
