--- a/index.html
+++ b/index.html
@@ -364,12 +364,12 @@
        </a-entity>
     </a-camera>
 
-    <a-entity id="controle-360-gaze" visible="false" position="0 1.6 -2">
-        <a-plane id="btnPlay360" color="#EF2D5E" width="1.5" height="0.5">
-           <a-troika-text id="btnText360" value="TOCAR/PAUSAR" align="center" position="0 0 0.02" width="4"></a-troika-text>
+    <a-entity id="controle-360-gaze" visible="false" position="0 1 -2">
+        <a-plane id="btnPlay360" color="#EF2D5E" width="1" height="0.5">
+           <a-troika-text id="btnText360" value="Play/Pause" align="center" position="0 0 0.02" width="2"></a-troika-text>
         </a-plane>
         <a-plane id="btnVoltar360" position="0 -0.6 0" width="0.8" height="0.3" color="#444" class="clicavel" onclick="sairDo360()">
-            <a-troika-text value="SAIR" align="center" position="0 0 0.02" width="4"></a-troika-text>
+            <a-troika-text value="Sair" align="center" position="0 0 0.02" width="2"></a-troika-text>
         </a-plane>
     </a-entity>
 
@@ -428,6 +428,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
