--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           },
           'Turismo': { 
               t: 'Pontos Turísticos', type: 'galeriaVideo', itens: [
-                  { video: './assets/videos/turismo1.mp4', txt: 'Cachoeira do Jari' },
-                  { video: './assets/videos/turismo2.mp4', txt: 'Passeio de Barco' },
-                  { video: './assets/videos/turismo3.mp4', txt: 'Trilha na Mata' },
-                  { video: './assets/videos/turismo4.mp4', txt: 'Centro Histórico' }
+                  { video: './assets/videos/vj1.mp4', txt: 'Serra do Parente' },
+                  { video: './assets/videos/vj2.mp4', txt: 'Orla Vitória do Jari' },
+                  { video: './assets/videos/vj3.mp4', txt: 'Baln. Belas Águas' },
+                  { video: './assets/videos/vj4.mp4', txt: 'Baln. Recanto do Cupu' }
               ]
           }
         }
@@ -455,6 +455,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
